tests/invalid/units_discriminator_molec_is_count.esm
{
  "esm": "0.8.0",
  "metadata": {
    "name": "UnitsDiscriminatorMolecIsCount",
    "description": "Invalid: `molec` is a dimensionless COUNT of molecules, NOT the mole. `bad_amount` is declared in `mol/m^3` (an amount-of-substance density) but its expression is `n_air`, in `molec/cm^3` -- a pure NUMBER density (1/m^3). A correct binding rejects. A binding that gave `molec` the substance dimension ACCEPTS. This is the NEGATIVE half of the discriminator in tests/valid/units_registry_grammar.esm. A VALID fixture can only prove a binding does not FALSELY REJECT; it CANNOT prove the binding checks anything -- mutation testing showed every observed variable in the valid fixture could be corrupted and still pass, because no binding compared a declared unit against the dimension its expression computes. This file makes the same assertion in the contrapositive: a CORRECT binding REJECTS it, and a binding carrying the bug ACCEPTS it. Everything but the one observed variable is dimensionally clean.",
    "authors": [
      "EarthSciML"
    ],
    "created": "2026-07-14T00:00:00Z"
  },
  "models": {
    "BadUnitsModel": {
      "variables": {
        "y": {
          "type": "state",
          "units": "1",
          "description": "State. Dimensionally clean; not part of the defect."
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 1.0,
          "description": "Decay rate. Dimensionally clean; not part of the defect."
        },
        "n_air": {
          "type": "parameter",
          "units": "molec/cm^3",
          "default": 1.0,
          "description": "Air number density: a COUNT per volume."
        },
        "bad_amount": {
          "type": "observed",
          "units": "mol/m^3",
          "description": "THE ONLY DEFECT: declared units do not match the dimension its expression computes.",
          "expression": "n_air"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "y"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              {
                "op": "-",
                "args": [
                  "k"
                ]
              },
              "y"
            ]
          }
        }
      ]
    }
  }
}
